--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "openapi-typescript-codegen": "^0.23.0",
     "pinia": "^2.0.11",
     "ts-proto": "^1.135.2",
     "vue": "^3.2.31",
+    "vue-axios": "^3.5.2",
     "vue-i18n": "^9.2.0-beta.33",
     "vue-router": "^4.0.12"
   },
